--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@hypernym/nuxt-anime": "^2.1.1",
     "@nuxt/devtools": "latest",
     "@tailwindcss/typography": "^0.5.10",
+    "@vueuse/core": "^10.4.1",
+    "@vueuse/nuxt": "^10.4.1",
     "daisyui": "latest",
     "nuxt": "^3.7.4"
   },
