--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "dev:build": "nuxt build src"
+    "dev:build": "nuxt build src",
+    "dev:prepare": "nuxt-module-build --stub && nuxi prepare"
   },
   "devDependencies": {
     "@hypernym/nuxt-anime": "^2.1.1",
@@ -17,7 +18,9 @@
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "daisyui": "latest",
-    "nuxt": "^3.7.4"
+    "my-module": "^1.0.0",
+    "nuxt": "^3.7.4",
+    "nuxt-multi-tenancy": "^1.0.2"
   },
   "dependencies": {
     "@nuxt/content": "^2.8.4",
