--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "daisyui": "latest",
     "my-module": "^1.0.0",
     "nuxt": "^3.7.4",
-    "nuxt-multi-tenancy": "^1.0.2"
+    "nuxt-multi-tenancy": "^1.0.2",
+    "nuxt-viewport": "^2.0.6"
   },
   "dependencies": {
     "@nuxt/content": "^2.8.4",
