--- a/package.json
+++ b/package.json
@@ -9,24 +9,29 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "dev:build": "nuxt build src",
-    "dev:prepare": "nuxt-module-build --stub && nuxi prepare"
+    "dev:prepare": "nuxt-module-build --stub && nuxi prepare",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@hypernym/nuxt-anime": "^2.1.1",
     "@nuxt/devtools": "latest",
+    "@nuxt/eslint-config": "^0.2.0",
+    "@nuxtjs/eslint-module": "^4.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "daisyui": "latest",
+    "eslint": "^8.56.0",
     "my-module": "^1.0.0",
-    "nuxt": "^3.7.4",
+    "nuxt": "^3.9.1",
     "nuxt-multi-tenancy": "^1.0.2",
     "nuxt-viewport": "^2.0.6"
   },
   "dependencies": {
     "@nuxt/content": "^2.8.4",
     "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@nuxtjs/tailwindcss": "^6.10.4",
+    "bun": "",
     "shiki": "^0.14.4"
   }
 }
