--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "devDependencies": {
     "@hypernym/nuxt-anime": "^2.1.1",
+    "@hypernym/nuxt-gsap": "^2.4.2",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/google-fonts": "^3.1.3",
     "@tailwindcss/typography": "^0.5.10",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
@@ -24,14 +26,12 @@
     "eslint": "^8.56.0",
     "my-module": "^1.0.0",
     "nuxt": "^3.9.1",
-    "nuxt-multi-tenancy": "^1.0.2",
     "nuxt-viewport": "^2.0.6"
   },
   "dependencies": {
     "@nuxt/content": "^2.8.4",
-    "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^6.10.4",
-    "bun": "",
+    "@nuxt/ui": "^2.12.3",
+    "bun": "^1.0.21",
     "shiki": "^0.14.4"
   }
 }
